# WDBx

./: .gitignore  CMakeLists.txt  README.md  filter-listfile.py  vcpkg-configuration.json  vcpkg.json
src/: WDBx.rc  database.cpp  database.h  databasemodel.cpp  databasemodel.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  filesystem.cpp  filesystem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opendialog.cpp  opendialog.h  opendialog.ui  query.h  queryeditor.cpp  queryeditor.h  queryeditor.ui  schemaexport.cpp  schemaexport.h  schemahelpers.h  settings.cpp  settings.h  table.cpp  table.h  table.ui
src/tree_sitter/: parser.c  tree-sitter-WDBx.h
tree-sitter-wdbx/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  pyproject.toml  setup.py
vcpkg/ports/wdbreader/: portfile.cmake  vcpkg.json
vcpkg/triplets/: x64-windows-mixed.cmake
